Added item and player repositories
